[gd_scene load_steps=8 format=3]

[ext_resource type="Theme" path="res://themes/rpg_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/2d/city.gd" id="2_script"]
[ext_resource type="Script" path="res://scripts/2d/components/menu_list.gd" id="3_menu"]
[ext_resource type="PackedScene" path="res://scenes/3d/maps/city_market.tscn" id="4_city_market"]

[sub_resource type="StyleBoxFlat" id="panel_style"]
bg_color = Color(0.878, 0.910, 0.941, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[sub_resource type="Gradient" id="gradient"]
colors = PackedColorArray(0.353, 0.612, 0.816, 0, 0.353, 0.612, 0.816, 0.5)

[sub_resource type="GradientTexture2D" id="gradient_tex"]
gradient = SubResource("gradient")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="City" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="CityMarket" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_city_market")]

[node name="GradientOverlay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("gradient_tex")
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="LeftPanel" type="PanelContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
theme_override_styles/panel = SubResource("panel_style")

[node name="TitleLabel" type="Label" parent="HBox/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="MenuList" type="VBoxContainer" parent="HBox/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_menu")

[node name="RightPanel" type="PanelContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
theme_override_styles/panel = SubResource("panel_style")

[node name="CharInfo" type="VBoxContainer" parent="HBox/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HintLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.816, 0.847, 0.878, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
